Fix min height on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -157,7 +157,7 @@ iframe {
 }
 
 .fullscreen {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 /*
